syntax = "proto3";

option go_package = "urlshortener/pkg/urlshortener/api/grpc";

service UrlShortener {
    rpc Shorten(ShortenRequest) returns (ShortenResponse);
    rpc Unshorten(UnshortenRequest) returns (UnshortenResponse);
}

message ShortenRequest {
    string message = 1;
}

message ShortenResponse {
    string message = 1;
}

message UnshortenRequest {
    string message = 1;
}

message UnshortenResponse {
    string message = 1;
}
